# gain-knob

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  nightly.yml  release.yml  tests.yml
Source/: KnobDesign.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Tests/: GainTest.cpp
Tools/: Screenshot.cpp
docs/coverage/: index-sort-f.html  index-sort-l.html  index.html
docs/coverage/Source/: KnobDesign.h.func-c.html  KnobDesign.h.func.html  KnobDesign.h.gcov.html  PluginEditor.cpp.func-c.html  PluginEditor.cpp.func.html  PluginEditor.cpp.gcov.html  PluginEditor.h.func-c.html  PluginEditor.h.func.html  PluginEditor.h.gcov.html  PluginProcessor.cpp.func-c.html  PluginProcessor.cpp.func.html  PluginProcessor.cpp.gcov.html  PluginProcessor.h.func-c.html  PluginProcessor.h.func.html  PluginProcessor.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
docs/coverage/Tests/: GainTest.cpp.func-c.html  GainTest.cpp.func.html  GainTest.cpp.gcov.html  index.html
